--- a/client/src/css/TodoList.css
+++ b/client/src/css/TodoList.css
@@ -12,7 +12,7 @@ h2 {
   margin-left: 600px;
   margin-right: 8px;
   margin-bottom: 50px;
-  width: 40%;
+  width: 30%;
 }
 
 ul {
@@ -31,7 +31,33 @@ li {
 
 button {
   text-align: center;
+  margin-left: 10px;
   background-color: #f49e36;
+  border-radius: 5px;
+  color: white;
+  border: none;
+  padding: 8px;
+  cursor: pointer;
+}
+
+#editbutton {
+  float: right;
+  text-align: center;
+  margin-left: 10px;
+  background-color: #f49e36;
+  border-radius: 5px;
+  color: white;
+  border: none;
+  padding: 8px;
+  cursor: pointer;
+}
+
+#deletebutton {
+  float: right;
+  text-align: center;
+  margin-left: 10px;
+  background-color: #f49e36;
+  border-radius: 5px;
   color: white;
   border: none;
   padding: 8px;
